Correct the responsiveness on smaller screens

--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -23,3 +23,9 @@
 .videoCard:hover > .videoCard__stats {
   display: inline;
 }
+
+@media (max-width: 700px) {
+  .videoCard > img {
+    width: 100%;
+  }
+}
